Try to fix svg cutoff issue by setting a width

--- a/styles.css
+++ b/styles.css
@@ -91,6 +91,7 @@ div.linkout div.twitter img {
 
 .blog-svg {
 	max-height: 58px;
+	width: 293px;
 }
 
 div.tech {
